Fix T46671: Cycles assert with CMJ sample function

With current formulation of cmj_fast_div_pow2() it should always return 0
in the case of first argument is zero and no assert really needed anymore.